@@ -1,7 +1,4 @@
 begin_unit
-begin_comment
-comment|// -*- c-basic-offset: 2 -*-
-end_comment
 begin_package
 DECL|package|org.apache.lucene.analysis.morfologik
 package|package
@@ -32,9 +29,45 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|InputStream
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
-name|*
+name|ArrayList
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collections
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Objects
 import|;
 end_import
 begin_import
@@ -54,7 +87,34 @@ name|morfologik
 operator|.
 name|stemming
 operator|.
-name|*
+name|Dictionary
+import|;
+end_import
+begin_import
+import|import
+name|morfologik
+operator|.
+name|stemming
+operator|.
+name|DictionaryLookup
+import|;
+end_import
+begin_import
+import|import
+name|morfologik
+operator|.
+name|stemming
+operator|.
+name|IStemmer
+import|;
+end_import
+begin_import
+import|import
+name|morfologik
+operator|.
+name|stemming
+operator|.
+name|WordData
 import|;
 end_import
 begin_import
@@ -153,7 +213,7 @@ name|lucene
 operator|.
 name|util
 operator|.
-name|*
+name|CharsRefBuilder
 import|;
 end_import
 begin_comment
@@ -298,13 +358,13 @@ name|this
 argument_list|(
 name|in
 argument_list|,
-name|MorfologikFilterFactory
+name|DictionaryHolder
 operator|.
-name|DEFAULT_DICTIONARY_RESOURCE
+name|DEFAULT_DICT
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Creates a filter with a given dictionary resource.    *    * @param in input token stream.    * @param dict Dictionary resource from classpath.    */
+comment|/**    * Creates a filter with a given dictionary resource.    *    * @param in input token stream.    * @param dictResource Dictionary resource name in classpath.    */
 DECL|method|MorfologikFilter
 specifier|public
 name|MorfologikFilter
@@ -315,6 +375,44 @@ name|in
 parameter_list|,
 specifier|final
 name|String
+name|dictResource
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|in
+argument_list|,
+name|MorfologikFilterFactory
+operator|.
+name|DEFAULT_DICTIONARY_RESOURCE
+operator|.
+name|equals
+argument_list|(
+name|dictResource
+argument_list|)
+condition|?
+name|DictionaryHolder
+operator|.
+name|DEFAULT_DICT
+else|:
+name|loadDictionaryResource
+argument_list|(
+name|dictResource
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Creates a filter with a given dictionary.    *    * @param in input token stream.    * @param dict Dictionary to use for stemming.    */
+DECL|method|MorfologikFilter
+specifier|public
+name|MorfologikFilter
+parameter_list|(
+specifier|final
+name|TokenStream
+name|in
+parameter_list|,
+specifier|final
+name|Dictionary
 name|dict
 parameter_list|)
 block|{
@@ -336,16 +434,7 @@ operator|=
 operator|new
 name|DictionaryLookup
 argument_list|(
-name|morfologik
-operator|.
-name|stemming
-operator|.
-name|Dictionary
-operator|.
-name|getForLanguage
-argument_list|(
 name|dict
-argument_list|)
 argument_list|)
 expr_stmt|;
 name|this
@@ -791,6 +880,142 @@ operator|.
 name|reset
 argument_list|()
 expr_stmt|;
+block|}
+comment|/** This method was added, because Morfologik uses context classloader and fails to load from our classloader (bug with absolute path). */
+DECL|method|loadDictionaryResource
+specifier|static
+name|Dictionary
+name|loadDictionaryResource
+parameter_list|(
+name|String
+name|resource
+parameter_list|)
+block|{
+name|Objects
+operator|.
+name|requireNonNull
+argument_list|(
+name|resource
+argument_list|,
+literal|"Morfologik language code may not be null"
+argument_list|)
+expr_stmt|;
+specifier|final
+name|String
+name|dictPath
+init|=
+literal|"/morfologik/dictionaries/"
+operator|+
+name|resource
+operator|+
+literal|".dict"
+decl_stmt|;
+specifier|final
+name|String
+name|metaPath
+init|=
+name|Dictionary
+operator|.
+name|getExpectedFeaturesName
+argument_list|(
+name|dictPath
+argument_list|)
+decl_stmt|;
+try|try
+init|(
+specifier|final
+name|InputStream
+name|dictIn
+init|=
+name|Objects
+operator|.
+name|requireNonNull
+argument_list|(
+name|Dictionary
+operator|.
+name|class
+operator|.
+name|getResourceAsStream
+argument_list|(
+name|dictPath
+argument_list|)
+argument_list|,
+literal|"Unable to find Morfologik dictionary: "
+operator|+
+name|dictPath
+argument_list|)
+init|;
+name|final
+name|InputStream
+name|metaIn
+operator|=
+name|Objects
+operator|.
+name|requireNonNull
+argument_list|(
+name|Dictionary
+operator|.
+name|class
+operator|.
+name|getResourceAsStream
+argument_list|(
+name|metaPath
+argument_list|)
+argument_list|,
+literal|"Unable to find Morfologik metadata: "
+operator|+
+name|metaPath
+argument_list|)
+init|)
+block|{
+return|return
+name|Dictionary
+operator|.
+name|readAndClose
+argument_list|(
+name|dictIn
+argument_list|,
+name|metaIn
+argument_list|)
+return|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ioe
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"IOException while loading Morfologik dictionary and metadata."
+argument_list|,
+name|ioe
+argument_list|)
+throw|;
+block|}
+block|}
+comment|/** This holder is for the default Polish dictionary */
+DECL|class|DictionaryHolder
+specifier|static
+specifier|final
+class|class
+name|DictionaryHolder
+block|{
+DECL|field|DEFAULT_DICT
+specifier|static
+specifier|final
+name|Dictionary
+name|DEFAULT_DICT
+init|=
+name|loadDictionaryResource
+argument_list|(
+name|MorfologikFilterFactory
+operator|.
+name|DEFAULT_DICTIONARY_RESOURCE
+argument_list|)
+decl_stmt|;
 block|}
 block|}
 end_class
